# Skajla

./: .bandit  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .replit  API_REGISTRO_ELETTRONICO.md  CRITICITA_SVILUPPATORE.md  DEPLOY_HETZNER.md  Dockerfile  MIGRATION_GUIDE.md  README_PRODUCTION.md  SKAILA_Business_Plan_Investors.md  SKAILA_Documentation.md  SKAILA_Executive_Summary.md  SKAILA_Feature_Comparison.md  SKAILA_Pitch_Deck_Structure.md  SKAILA_SuperApp_Architecture.md  SKAILA_User_Guides.md  admin_dashboard.py  ai_chatbot.py  ai_cost_manager.py  ai_insights_engine.py  ai_registro_intelligence.py  cache_manager.py  calendario_integration.py  coaching_engine.py  codici_scuole_skaila.txt  config.py  create_test_accounts.py  csrf_protection.py  database_keep_alive.py  database_manager.py  database_schema_reports.sql  database_upgrade.py  deploy_hetzner.sh  deploy_to_hetzner.sh  docker-compose.yml  email_sender.py  email_validator.py  (+36 more)
attached_assets/: 2_DPA_Template_Skaila-Scuole_1766003639386.docx  3_Informativa_Privacy_STUDENTI_1766003917078.docx  DATABASESQL_1764283179498.rtf  GAMIFICATIONMODEL_1764283172502.py  INTRODUZIONE COMPLIANCE _1756739361172.docx  Pasted-Absolutely-Dani-here-s-your-perfect-English-version-of-the-prompt-crafted-for-maximum-clarity-an-1762469642924_1762469642925.txt  Pasted-Act-as-a-Chief-Technology-Officer-CTO-and-Product-Architect-for-Skaila-a-next-gen-EdTech-platfo-1764070754838_1764070754839.txt  Readmeinstallazione_1764283146147.MD  challengemanager_1764283158811.py  gamificationroutes_1764283152858.py  (+13 more)
static/: sw.js  (+2 more)
(+263 files in other folders)
