[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-socketio = "^5.5.1"
openai = "^1.98.0"
werkzeug = "^3.1.3"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
psycopg2-binary = "2.9.9"
redis = "^6.4.0"
psutil = "^7.0.0"
eventlet = "^0.40.3"
replit-object-storage = "^1.0.2"
flask-compress = "^1.20"
flask-limiter = "^4.0.0"
apscheduler = "^3.11.0"
authlib = "^1.6.5"
sqlalchemy = "^2.0.44"
alembic = "^1.17.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"